@@ -1,5 +1,10 @@
 2004-05-11  Bruno Haible  <bruno@clisp.org>
 
+	* lispbibl.d (bit_test): Make it work on SPARC64.
+	* genclisph.d (main): Update accordingly.
+
+2004-05-11  Bruno Haible  <bruno@clisp.org>
+
 	* arisparc64.d: Add register declaration for %g2.
 	(copy_loop_down): Fix wrong register.
 
